--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
 .contacts-element{
   margin-left: 10%; vertical-align: middle; font-size: 20px;
 }
-header{
+h1{
   font-size: 42px;
   margin-left: 3%;
   margin-top: 3%;
